add_subdirectory(BeginAndEndCommandBuffer_test)
add_subdirectory(BeginAndEndRenderPass_test)
add_subdirectory(BeginAndEndQuery_test)
add_subdirectory(BufferImageCopy_test)
add_subdirectory(DispatchAndDispatchIndirect_test)
add_subdirectory(DrawCommands_test)
add_subdirectory(QueueSubmitAndWait_test)
add_subdirectory(vkQueuePresentKHR_test)
add_subdirectory(SetDepthBias_test)
add_subdirectory(SetLineWidthAndBlendConstants_test)
add_subdirectory(SetStencilMask_test)
add_subdirectory(SetViewportScissorAndBindPipeline_test)
add_subdirectory(vkCmdBindDescriptorSets_test)
add_subdirectory(vkCmdBindIndexBuffer_test)
add_subdirectory(vkCmdBindVertexBuffers_test)
add_subdirectory(vkCmdBlitImage_test)
add_subdirectory(vkCmdPushConstants_test)
add_subdirectory(vkCmdExecuteCommands_test)
add_subdirectory(vkCmdNextSubpass_test)
add_subdirectory(vkCmdResolveImage_test)
add_subdirectory(vkCmdCopyImage_test)
add_subdirectory(vkCmdClearAttachments_test)
add_subdirectory(vkCmdClearColorImage_test)
add_subdirectory(vkCmdClearDepthStencilImage_test)
add_subdirectory(vkCmdUpdateBuffer_test)
add_subdirectory(vkCmdFillBuffer_test)
add_subdirectory(vkCmdCopyQueryPoolResults_test)
add_subdirectory(vkCmdResetQueryPool_test)
add_subdirectory(vkCmdSetStencilReference_test)
