add_subdirectory(vkGetDeviceQueue)
add_subdirectory(vkGetSwapchainImagesKHR_test)
add_subdirectory(vkAcquireNextImageKHR_test)
add_subdirectory(vkGetPipelineCacheData_test)
add_subdirectory(vkGetQueryPoolResults_test)
add_subdirectory(vkGetImageSparseMemoryRequirements_test)
add_subdirectory(vkGetImageSubresourceLayout_test)
add_subdirectory(vkGetRenderAreaGranularity_test)
