# Copyright 2017 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#


add_subdirectory(AllocateResetFreeCommandBuffer)
add_subdirectory(AllocateFreeDescriptorSets_test)
add_subdirectory(BindMapUnmapBuffer_test)
add_subdirectory(BufferCreationMemory_test)
add_subdirectory(CreateDestroyBufferView_test)
add_subdirectory(CreateDestroyDescriptorSetLayout_test)
add_subdirectory(CreateDestroyImage_test)
add_subdirectory(CreateDestroyImageView_test)
add_subdirectory(CreateDestroyQueryPool_test)
add_subdirectory(CreateDestroySampler_test)
add_subdirectory(CreateResetDestroyDescriptorPool_test)
add_subdirectory(FlushAndInvalidateRanges_test)
add_subdirectory(ImageMemory_test)
add_subdirectory(PipelineCache_test)
add_subdirectory(SurfaceCreation_test)
add_subdirectory(SyncCreationDestruction_test)
add_subdirectory(CreateResetDestroyCommandPool_test)
add_subdirectory(vkCreateComputePipelines_test)
add_subdirectory(vkCreateFramebuffer_test)
add_subdirectory(vkCreateGraphicsPipelines_test)
add_subdirectory(vkCreatePipelineLayout_test)
add_subdirectory(vkCreateRenderPass_test)
add_subdirectory(vkCreateShaderModule_test)
add_subdirectory(vkCreateSwapchainKHR_test)
