add_subdirectory(EnumerateLayersAndExtensions)
add_subdirectory(vkEnumeratePhysicalDevices)
add_subdirectory(PhysicalDeviceSurface_tests)
add_subdirectory(PhysicalDeviceTraits)
add_subdirectory(PresentationSupport)
add_subdirectory(vkGetPDQueueFamilyProperties)
add_subdirectory(vkGetPhysicalDeviceFormatProperties)
add_subdirectory(PhysicalDeviceImageFormatTraits)
